// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesSection component should render default view 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container undefined AdminCard css-vnjdcj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-1aoi7x3-MuiGridLegacy-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Additional notes
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                data-analyticsid="rek-notes"
                data-testid="rek-notes"
                id="rek-notes"
              >
                <span>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-lfi7cf-MuiTypography-root"
                    style="font-weight: 600;"
                  >
                    Additional notes (public)
                  </span>
                </span>
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container undefined AdminCard css-vnjdcj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-1aoi7x3-MuiGridLegacy-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Internal notes
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                data-analyticsid="ain-notes"
                data-testid="ain-notes"
                id="ain-notes"
              >
                <span>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                    style="opacity: 0.666;"
                  >
                    Internal notes (admin)
                  </span>
                </span>
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container undefined AdminCard css-vnjdcj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-1aoi7x3-MuiGridLegacy-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Cultural Institute (CI) Notice
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div>
                <span
                  class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                >
                  Determines if the record or collection is to be CI labelled Attribution Incomplete.
                </span>
              </div>
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1gq9gxy-MuiFormControlLabel-root"
              >
                <span
                  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1cql8xn-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
                >
                  <input
                    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                    data-analyticsid="attributionIncomplete-input"
                    data-indeterminate="false"
                    data-testid="attributionIncomplete-input"
                    id="attributionIncomplete-input"
                    type="checkbox"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="CheckBoxOutlineBlankIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <div
                  class="MuiTypography-root MuiTypography-body1 css-p3i1lu-MuiTypography-root"
                  data-testid="attributionIncomplete-label"
                  id="attributionIncomplete-label"
                >
                  Attribution Incomplete
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotesSection component should render disabled view 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container undefined AdminCard css-vnjdcj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-1aoi7x3-MuiGridLegacy-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Additional notes
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                data-analyticsid="rek-notes"
                data-testid="rek-notes"
                id="rek-notes"
              >
                <span>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-lfi7cf-MuiTypography-root"
                    style="font-weight: 600;"
                  >
                    Additional notes (public)
                  </span>
                </span>
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container undefined AdminCard css-vnjdcj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-1aoi7x3-MuiGridLegacy-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Internal notes
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                data-analyticsid="ain-notes"
                data-testid="ain-notes"
                id="ain-notes"
              >
                <span>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                    style="opacity: 0.666;"
                  >
                    Internal notes (admin)
                  </span>
                </span>
                <div />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container undefined AdminCard css-vnjdcj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
              >
                <hr
                  class="MuiBox-root css-1a7sacs"
                />
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-1aoi7x3-MuiGridLegacy-root"
              >
                <h4
                  class="MuiTypography-root MuiTypography-body1 css-16hbzx4-MuiTypography-root"
                >
                   
                  Cultural Institute (CI) Notice
                </h4>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-md-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div>
                <span
                  class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
                >
                  Determines if the record or collection is to be CI labelled Attribution Incomplete.
                </span>
              </div>
              <label
                class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-1gq9gxy-MuiFormControlLabel-root"
              >
                <span
                  aria-disabled="true"
                  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1cql8xn-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
                  tabindex="-1"
                >
                  <input
                    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                    data-analyticsid="attributionIncomplete-input"
                    data-indeterminate="false"
                    data-testid="attributionIncomplete-input"
                    disabled=""
                    id="attributionIncomplete-input"
                    type="checkbox"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="CheckBoxOutlineBlankIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                </span>
                <div
                  class="MuiTypography-root MuiTypography-body1 css-p3i1lu-MuiTypography-root"
                  data-testid="attributionIncomplete-label"
                  id="attributionIncomplete-label"
                >
                  Attribution Incomplete
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
